学习记录-授权认证失败后重新登录