@@ -3,6 +3,7 @@ package com.hwmo.jvm故障诊断与性能优化.chapter5;
 public class ScavengeBeforeFullGC {
 
     public static void main(String[] args) {
+        //-XX:+UseParallelOldGC -XX:+PrintGCDetails
         System.gc();//使用并行回收器UseParallelOldGC，触发FULL gC之前，进行了一次新生代GC
     }
 
